--- a/package.json
+++ b/package.json
@@ -1,16 +1,6 @@
 {
-  "name": "healthmatrixdesktop",
-  "version": "1.0.0",
-  "description": "HealthMatrix desktop application",
-  "main": "dash.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node index.js" // For Node.js apps
-    // Or for React apps
-    // "start": "react-scripts start"
-    // Or for Electron apps
-    // "start": "electron ."
-  },
-  "dependencies": {
-    // Add dependencies here
+      "start": "electron ."
   }
 }
